--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -75,6 +75,7 @@
 }
 
 /* Hero Section */
+
 main {
     margin: 0 15px;
 }
@@ -96,6 +97,16 @@ main {
     padding: 0 100px;
 }
 
+#hero-section .content h1 {
+    font-size: 3.4rem;
+    font-weight: 600;
+    line-height: 70px;
+}
+
+#hero-section .content span {
+    margin: 0 10px;
+}
+
 .buy-btn {
     font-size: 0.95rem;
     font-weight: 500;
@@ -104,6 +115,7 @@ main {
     color: white;
     padding: 14px 18px;
     border-radius: 30px;
+    margin-top: 50px;
 }
 
 .buy-btn i {
