--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -124,3 +124,37 @@ main {
     color: white;
 }
 
+/* Products Section */
+
+#product-section {
+    
+}
+
+.product-content {
+    display: flex;
+    gap: 25px;
+    margin-top: 25px;
+    max-width: 1600px;
+    margin: auto
+    ;
+}
+
+.product .product-img {
+    width: 300px;
+    height: 290px;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product > div {
+    position: absolute;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
