--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -5,6 +5,11 @@
     font-family: "Poppins", serif;
 }
 
+:root {
+    --buttoncolor--: #2A74ED;
+    --white--: white;
+}
+
 /* Navbar Style */
 
 #navbar {
@@ -61,9 +66,9 @@
 .cart-btn {
     font-size: 0.95rem;
     font-weight: 500;
-    background-color: #2A74ED;
+    background-color: var(--buttoncolor--);
     border: none;
-    color: white;
+    color: var(--white--);
     padding: 10px 15px;
     border-radius: 30px;
 }
@@ -71,7 +76,7 @@
 .cart-btn i {
     font-size: 1rem;
     padding: 2px;
-    color: white;
+    color: var(--white--);
 }
 
 /* Hero Section */
@@ -110,9 +115,9 @@ main {
 .buy-btn {
     font-size: 0.95rem;
     font-weight: 500;
-    background-color: #2A74ED;
+    background-color: var(--buttoncolor--);
     border: none;
-    color: white;
+    color: var(--white--);
     padding: 14px 18px;
     border-radius: 30px;
     margin-top: 50px;
@@ -121,27 +126,37 @@ main {
 .buy-btn i {
     font-size: 1rem;
     padding: 2px;
-    color: white;
+    color: var(--white--);
 }
 
 /* Products Section */
 
 #product-section {
-    
+    margin-top: 25px;
 }
 
 .product-content {
     display: flex;
-    gap: 25px;
-    margin-top: 25px;
+    gap: 35px;
     max-width: 1600px;
-    margin: auto
-    ;
+    margin: auto;
+}
+
+.product {
+    min-width: 320px;
+    min-height: 300px;
+    width: 100%;
+    overflow: hidden;
 }
 
 .product .product-img {
-    width: 300px;
-    height: 290px;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s;
+}
+
+.product .product-img:hover {
+    transform: scale(1.15);
 }
 
 .product {
@@ -157,4 +172,41 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 2;
+}
+
+.product > div span {
+    color: grey;
+    font-size: 0.80rem;
+}
+
+/* Previous and next button */
+
+.buttons {
+    align-self: center;
+}
+
+.buttons button {
+    background-color: var(--white--);
+    border: 0.5px solid black;
+    padding: 10px 14px;
+    border-radius: 50%;
+}
+
+.buttons .prev-btn {
+    position: absolute;
+    left: 8px;
+
+}
+.buttons .next-btn {
+    position: absolute;
+    right: 8px;
+}
+
+/* utility classes */
+
+.product-heading {
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-family: "Poppins", serif;
 }
