--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -245,6 +245,7 @@ main {
   font-weight: 300;
   padding: 5px 6px;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 .smart-product-content .left .icon-1 {
