--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -283,7 +283,7 @@ main {
   box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   background-color: white;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
