--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -276,16 +276,35 @@ main {
 
 .hover-item {
   position: absolute;
-  left: 100px;
-  top: 60px;
   width: 250px;
   height: 400px;
   box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   background-color: white;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
+}
+
+.hover-item-1 {
+  left: 100px;
+  top: 60px;
+}
+
+.hover-item-2 {
+  left: 110px;
+  top: 30px;
+}
+
+.hover-item-3 {
+  left: 190px;
+  top: 60px;
+}
+
+.hover-item-4 {
+  left: 370px;
+  top: -60px;
+
 }
 
 .hover-item img {
