--- a/Wesbite/assets/css/style.css
+++ b/Wesbite/assets/css/style.css
@@ -341,6 +341,47 @@ main {
   background-color: #444444;
 }
 
+#tranding-item-section {
+  margin-top: 70px;
+}
+
+.tranding-item-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tranding-item-content h1 {
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: 500;
+}
+
+.tranding-item-content hr {
+  width: 130px;
+  height: 5px;
+  background-color: var(--primary-color--);
+  border-radius: 4px;
+  margin: 10px 0;
+}
+
+/* Tranding Item Section  */
+
+.tranding-item {
+  display: flex;
+}
+
+.tranding-items .item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  justify-content: center;
+  align-items: center;
+}
+
+.item img {
+  width: 300px;
+}
 
 /* utility classes */
 
